// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ImageContent 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#FAFAFA",
        "borderRadius": 5,
        "minHeight": 52,
        "padding": 16,
      },
      false,
      Object {
        "elevation": 3,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": -0.24,
          "lineHeight": 20,
        },
        undefined,
        undefined,
      ]
    }
  >
    test image
  </Text>
</View>
`;

exports[`renders ImageContent in repost mode 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#FAFAFA",
        "borderRadius": 5,
        "minHeight": 52,
        "padding": 16,
      },
      Object {
        "backgroundColor": "#FFFFFF",
        "marginBottom": 0,
        "minHeight": 0,
        "padding": 0,
      },
      Object {
        "elevation": 3,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": -0.24,
          "lineHeight": 20,
        },
        undefined,
        undefined,
      ]
    }
  >
    test image
  </Text>
</View>
`;
